<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/offerdetails_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgpattern">

    <LinearLayout
        android:id="@+id/offerdetails_layoutview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:paddingTop="4dp" >

            <Button
                android:id="@+id/facebook_post"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_facebook" />

            <Button
                android:id="@+id/twitter_post"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_twitter" />

            <Button
                android:id="@+id/email_post"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_email" />
        </LinearLayout>

        <!-- Category -->

        <TextView
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Title -->

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="4dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <!-- Date -->

        <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="4dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Freelance -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:paddingTop="4dp" >

            <TextView
                android:id="@+id/freelance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/freelance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <!-- Positivism -->

        <TextView
            android:id="@+id/positivism_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:paddingTop="4dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positivism"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:autoLink="web|phone|email"
            android:paddingTop="4dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Negativism -->

        <TextView
            android:id="@+id/negativism_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:paddingTop="4dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/negativism"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:autoLink="web|phone|email"
            android:paddingBottom="10dp"
            android:paddingTop="4dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>